[gd_scene load_steps=8 format=3 uid="uid://csuta0pmq5g5w"]

[ext_resource type="Script" path="res://levels/Battleground.gd" id="1_vlntp"]
[ext_resource type="PackedScene" uid="uid://ctkuvofk1bp6v" path="res://characters/enemy/Enemy.tscn" id="2_w3ppg"]
[ext_resource type="PackedScene" uid="uid://c05hqagofqom2" path="res://characters/player/Player.tscn" id="3_fm3ki"]
[ext_resource type="PackedScene" uid="uid://bjn7flketgol5" path="res://feature/skills/skill1/skill1.tscn" id="4_2b3db"]
[ext_resource type="TileSet" uid="uid://cbovk57ufb4qx" path="res://levels/Battleground.tres" id="4_ph52o"]
[ext_resource type="Script" path="res://feature/battle/BattleService.gd" id="5_dmgp0"]
[ext_resource type="PackedScene" uid="uid://c21uqtsbw37l" path="res://feature/skills/skill3/skill3.tscn" id="5_ib3d2"]

[node name="Battleground" type="Node2D"]
script = ExtResource("1_vlntp")
mob_scene = ExtResource("2_w3ppg")
player_scene = ExtResource("3_fm3ki")
skills_scene = Array[PackedScene]([ExtResource("4_2b3db"), ExtResource("5_ib3d2")])

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(572, 354)
zoom = Vector2(5, 5)

[node name="Player1Start" type="Marker2D" parent="."]
position = Vector2(534, 348)

[node name="Enemy1Start" type="Marker2D" parent="."]
position = Vector2(607, 348)

[node name="Background" type="CanvasLayer" parent="."]
layer = -1
follow_viewport_enabled = true

[node name="Field" type="TileMap" parent="Background"]
position = Vector2(500, 321)
tile_set = ExtResource("4_ph52o")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(-65539, 4, 1, -3, 4, 2, -65538, 65540, 1, -2, 65540, 2, 65534, 65540, 2, -65537, 65540, 1, -1, 65540, 2, 65535, 65540, 2, -131072, 65540, 1, -131071, 65540, 1, -131070, 65540, 1, -131069, 65540, 1, -131068, 65540, 1, -131067, 65540, 1, -131066, 65540, 1, -131065, 65540, 1, -131064, 65540, 1, -131063, 65540, 1, -131062, 65540, 1, 196605, 4, 2, 262141, 4, 2, 262142, 65540, 2, 327678, 65540, 2, 327677, 4, 2, 65533, 4, 2, 131069, 4, 2, 393215, 65540, 3, 0, 65540, 2, 1, 65540, 2, 2, 65540, 2, -65530, 65540, 2, -65529, 65540, 2, -65528, 65540, 2, -65527, 65540, 2, -65526, 65540, 2, 9, 65540, 2, 65545, 65540, 2, 65544, 65540, 2, 65543, 65540, 2, 65542, 65540, 2, 65541, 65540, 2, 65540, 65540, 2, 65539, 65540, 2, 65538, 65540, 2, 3, 65540, 2, 4, 65540, 2, 5, 65540, 2, 6, 65540, 2, 7, 65540, 2, 8, 65540, 2, 131071, 65540, 2, 131070, 65540, 2, 65536, 65540, 2, 65537, 65540, 2, 10, 65540, 2, 65546, 65540, 2, 131082, 65540, 2, 196617, 65540, 2, 196616, 65540, 2, 196615, 65540, 2, 196614, 65540, 2, 196613, 65540, 2, 196612, 65540, 2, 196611, 65540, 2, 196610, 65540, 2, 196609, 65540, 2, 196608, 65540, 2, 262143, 65540, 2, 196606, 65540, 2, 393214, 65540, 3, 327679, 65540, 2, 262144, 65540, 2, 196607, 65540, 2, 131072, 65540, 2, 131073, 65540, 2, 131074, 65540, 2, 131075, 65540, 2, 131076, 65540, 2, 131077, 65540, 2, 131078, 65540, 2, 131079, 65540, 2, 131080, 65540, 2, 131081, 65540, 2, 262153, 65540, 2, 262152, 65540, 2, 262151, 65540, 2, 262150, 65540, 2, 262149, 65540, 2, 262148, 65540, 2, 262147, 65540, 2, 262146, 65540, 2, 262145, 65540, 2, 262154, 65540, 2, 196618, 65540, 2, -65525, 131076, 2, 11, 131076, 2, 65547, 131076, 2, 131083, 131076, 2, 196619, 131076, 2, 262155, 131076, 2, 393213, 4, 3, 327680, 65540, 3, 327681, 65540, 3, 327682, 65540, 3, 327683, 65540, 3, 327684, 65540, 3, 327685, 65540, 3, 327686, 65540, 3, 327687, 65540, 3, 327688, 65540, 3, 327689, 65540, 3, 327690, 65540, 3, 327691, 131076, 3, -131061, 131076, 1, -65533, 65540, 2, -65536, 65540, 2, -65535, 65540, 2, -65534, 65540, 2, -65532, 65540, 2, -65531, 65540, 2)

[node name="SpeedTimer" type="Timer" parent="."]
wait_time = 0.118

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Skills" type="CanvasLayer" parent="HUD"]

[node name="Skill1" type="Button" parent="HUD/Skills"]
offset_left = 697.0
offset_top = 506.0
offset_right = 787.0
offset_bottom = 592.0

[node name="Skill2" type="Button" parent="HUD/Skills"]
offset_left = 848.0
offset_top = 506.0
offset_right = 938.0
offset_bottom = 592.0

[node name="Skill3" type="Button" parent="HUD/Skills"]
offset_left = 998.0
offset_top = 507.0
offset_right = 1088.0
offset_bottom = 593.0

[node name="BattleService" type="Node2D" parent="."]
script = ExtResource("5_dmgp0")

[node name="EnemyAoe" type="Marker2D" parent="."]
position = Vector2(645, 356)
